samples/_failures_safe/1761633898_2c9a9d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b076f1d.c: In function ‘main’:
./samples/SAFE/__tmp_5b076f1d.c:158:39: error: expected ‘)’ at end of input
  158 |                 if (add_matrices(&mat1
      |                                 ~     ^
      |                                       )
./samples/SAFE/__tmp_5b076f1d.c:158:21: error: too few arguments to function ‘add_matrices’
  158 |                 if (add_matrices(&mat1
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_5b076f1d.c:70:5: note: declared here
   70 | int add_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_5b076f1d.c:158:17: error: expected declaration or statement at end of input
  158 |                 if (add_matrices(&mat1
      |                 ^~
./samples/SAFE/__tmp_5b076f1d.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5b076f1d.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5b076f1d.c:158:17: error: expected declaration or statement at end of input
